force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Actives_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Actives_Taxes_New__c</fullName>
    <label>Actives Taxes New</label>
    <length>200</length>
    <type>Text</type>
</CustomField>