force-app/main/default/objects/Supplier_PG_Mapping__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>BU__c : La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.Related_Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Related_Client__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>