force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping (Department)</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping_Department</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>