force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Discount_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Discount_Taxes_New__c</fullName>
    <label>Discount Taxes New</label>
    <length>200</length>
    <type>Text</type>
</CustomField>