force-app/main/default/objects/Supplier_PG_Mapping__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <formula>Product__r.Product_EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAN</label>
    <type>Text</type>
</CustomField>