force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Extraction_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Date_Last__c</fullName>
    <label>Extraction Date Last</label>
    <type>Date</type>
</CustomField>