force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Extraction_id_Last__c.field-meta.xml
<CustomField>
    <fullName>Extraction_id_Last__c</fullName>
    <label>Extraction id Last</label>
    <length>25</length>
    <type>Text</type>
</CustomField>