force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Integration_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>Integration_Date_Last__c</fullName>
    <label>Integration Date Last</label>
    <type>Date</type>
</CustomField>