force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Integration_id_Last__c.field-meta.xml
<CustomField>
    <fullName>Integration_id_Last__c</fullName>
    <label>Integration id Last</label>
    <length>25</length>
    <type>Text</type>
</CustomField>