force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_2Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_2Net_Price__c</fullName>
    <label>Last 2Net Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>