force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_Gross_Price_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Gross_Price_Update__c</fullName>
    <label>Last Gross Price Update</label>
    <type>Date</type>
</CustomField>