force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_NetPrice_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Last_NetPrice_Proforma__c</fullName>
    <label>Last NetPrice Proforma</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>