force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_Product_Tax_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Product_Tax_Update__c</fullName>
    <label>Last Product Tax Update</label>
    <type>Date</type>
</CustomField>