force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_Product_UnitCharge_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Product_UnitCharge_Update__c</fullName>
    <description>Last date for Product UnitCharge update for this product line</description>
    <label>Last Product UnitCharge Update</label>
    <type>Date</type>
</CustomField>