force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Last_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Last_Unit_Cost__c</fullName>
    <formula>Product__r.Last_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>