force-app/main/default/objects/Supplier_PG_Mapping__c/fields/NetPrice_Rounding_Level__c.field-meta.xml
<CustomField>
    <fullName>NetPrice_Rounding_Level__c</fullName>
    <label>NetPrice Rounding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Level</valueSetName>
    </valueSet>
</CustomField>