force-app/main/default/objects/Supplier_PG_Mapping__c/fields/NetPrice_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>NetPrice_Taxes_New__c</fullName>
    <label>NetPrice Taxes New</label>
    <length>200</length>
    <type>Text</type>
</CustomField>