force-app/main/default/objects/Supplier_PG_Mapping__c/fields/PG_Ext_Code__c.field-meta.xml
<CustomField>
    <fullName>PG_Ext_Code__c</fullName>
    <externalId>true</externalId>
    <label>PG Ext Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>