force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Product_UnitCharge10__c.field-meta.xml
<CustomField>
    <fullName>Product_UnitCharge10__c</fullName>
    <label>Product UnitCharge10</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>