force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Product_UnitCharge1__c.field-meta.xml
<CustomField>
    <fullName>Product_UnitCharge1__c</fullName>
    <label>Product UnitCharge1</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>