force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Section__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_HE__c.Parent_Element__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping (Section)</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>