force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>