force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Synchro_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Synchro_Data_Source__c</fullName>
    <label>Synchro Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Synchro_Data_Source</valueSetName>
    </valueSet>
</CustomField>