force-app/main/default/objects/Supplier_PG_Mapping__c/fields/TarifCost_Date__c.field-meta.xml
<CustomField>
    <fullName>TarifCost_Date__c</fullName>
    <label>TarifCost Exec. Date</label>
    <type>Date</type>
</CustomField>