force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Tax_2_New__c.field-meta.xml
<CustomField>
    <fullName>Tax_2_New__c</fullName>
    <label>Tax 2 New</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>