force-app/main/default/objects/Supplier_PG_Mapping__c/fields/Total_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes_New__c</fullName>
    <formula>Tax_1_New__c + 
Tax_2_New__c +
Tax_3_New__c +
Tax_4_New__c + 
Tax_5_New__c +
Tax_6_New__c +
Tax_7_New__c + 
Tax_8_New__c +
Tax_9_New__c +
Tax_10_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxes New</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>